# CC3501-Assignment-2

./: .gitignore  .gitmodules  README.md  picknplace.csv
Altium files/: .gitignore  Group 2 Assignment 2.PrjPcb  Job1.OutJob  load_cell_amplifiers.SchDoc  main.SchDoc  power_supply.SchDoc  sd_card.SchDoc  sensors_and_dpg_ports.SchDoc  tranciever.SchDoc
FILES TO SUBMIT/: BOM.csv
code/: CMakeLists.txt  README.md  data_format.csv
code/SDI_12_test/: CMakeLists.txt  main.c
code/src/: board.h  main.cpp
code/src/drivers/dac/: MCP4716.cpp  MCP4716.h  dac.cpp  dac.h
code/src/drivers/loadcell/: loadcell.cpp  loadcell.h
code/src/drivers/logging/: logging.cpp  logging.h
code/src/drivers/sd_card/: sd_card.cpp  sd_card.h
code/src/drivers/sdi12/: sdi12.cpp  sdi12.h
code/src/drivers/terminal/: terminal.cpp  terminal.h
code/src/libs/: hw_config.c
misc/: .Rhistory  datalogging_sd_prototype.txt  loadcell_tuning.R
misc/adc_smoothing_test/: .Rhistory  adc_smoothing_plotting.R
misc/hardware_submission_files/: picknplace.csv
misc/loadcell_tuning_round1/: loadcell_linearity_test.xlsx  loadcell_tuning.R
misc/loadcell_tuning_round2/: mass_to_voltage.xlsx  model.R
report/: header.sty  main.tex  references.bib  sec1_intro.tex  sec2.1_comm_protocols.tex  sec2.1_components.tex  sec2.1_hardware_design.tex  sec2.2_challenges.tex  sec2.2_comm_protocols.tex  sec2.2_system_design.tex  sec2.2_user_interface.tex  sec2.3_user_interface.tex  sec2_overview.tex  sec2_results.tex  sec3.1_challenges.tex  sec3.2_discussion.tex  sec3.2_recommendations.tex  sec3.3_recommendations.tex  sec3_discussion.tex  sec4_conclusion.tex  sec4_recommendations.tex  sec5_appendix.tex  sec5_conclusion.tex
report/figures/: block_diagram.tex
report/tables/: data.csv
software prototype/: main.c
weekly_reports/: week_10.docx  week_11.docx  week_12.docx  week_13.docx  week_5.md  week_6.docx  week_7.docx  week_8.docx  week_9.docx  ~$eek_11.docx  ~$eek_13.docx  ~$week_6.docx  ~$week_7.docx
